# fastapi-jwt-auth

./: database.py  models.py  pyproject.toml
routers/: auth.py
