[tool.poetry]
name = "fastapi-jwt-auth"
version = "0.1.0"
description = ""
authors = ["cylobi <javad.afsari01@gmail.com>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.105.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
